classDiagram
    class BaseStore {
        <<abstract>>
        +loadHistory()*
        +saveMemoryToHistory()*
        +beginTransaction()*
        +commitTransaction()*
        +rollbackTransaction()*
        +verify()*
        +close()*
    }

    class SPARQLStore {
        -endpoint: Object
        -credentials: Object
        -graphName: string
        -inTransaction: boolean
        +_executeSparqlQuery()
        +_executeSparqlUpdate()
    }

    class CachedSPARQLStore {
        -queryCache: Map
        -cacheTimestamps: Map
        -cacheTTL: number
        -maxCacheSize: number
        +cleanupCache()
        +invalidateCache()
    }

    class JSONStore {
        -filePath: string
        -tempPath: string
        -backupPath: string
        +ensureDirectory()
        +verify()
    }

    class InMemoryStore {
        -history: Object
    }

    class MemoryStore {
        -dimension: number
        -shortTermMemory: Array
        -longTermMemory: Array
        +addInteraction()
        +retrieve()
    }

    BaseStore <|-- SPARQLStore
    SPARQLStore <|-- CachedSPARQLStore
    BaseStore <|-- JSONStore
    BaseStore <|-- InMemoryStore
    BaseStore <|-- MemoryStore